
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef enum want_ident { ____Placeholder_want_ident } want_ident ;


 int IDENT_NO_DATE ;
 int IDENT_STRICT ;



 char const* fmt_ident (char*,char*,int,int *,int) ;
 char* getenv (char*) ;

const char *fmt_name(enum want_ident whose_ident)
{
 char *name = ((void*)0);
 char *email = ((void*)0);

 switch (whose_ident) {
 case 129:
  break;
 case 130:
  name = getenv("GIT_AUTHOR_NAME");
  email = getenv("GIT_AUTHOR_EMAIL");
  break;
 case 128:
  name = getenv("GIT_COMMITTER_NAME");
  email = getenv("GIT_COMMITTER_EMAIL");
  break;
 }
 return fmt_ident(name, email, whose_ident, ((void*)0),
   IDENT_STRICT | IDENT_NO_DATE);
}
